# IOT-Camp-Sensor

./: CMakeLists.txt
components/bme280/: CMakeLists.txt  bme280.c  bme280.h
components/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
components/led/: CMakeLists.txt  led.c  led.h
components/mq7/: CMakeLists.txt  mq7.c  mq7.h
main/: CMakeLists.txt  idf_component.yml  main.c
